--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -31,11 +31,12 @@
             </div>
 
 				<div>
-					<img src="./images/Сая.jpg" height="800" class="сая">
+					<img src="./images/Сая.jpg" height="700" class="сая">
 				</div>
          </div>
 
          <div class="magistral">
+				<canvas class="can" width="1500" height="300"></canvas>
             <h2>Магистраль 🚄</h2>
             <div>
                <div>
@@ -50,6 +51,8 @@
             </div>
          </div>
       </div>
+
+		<div class="c-mag"></div>
 
       <script src="./script.js"></script>
    </body>
