--- a/index.html
+++ b/index.html
@@ -30,13 +30,24 @@
                </div>
             </div>
 
+            <div>
+               <img src="./images/Сая.jpg" height="700" class="сая" />
+					<p>убей себя педовка</p>
+            </div>
+
+            <div>
+               <button class="downBtn">НА 1 этаж</button><br />
+               <canvas class="elevator" width="80" height="920"></canvas>
+            </div>
+
 				<div>
-					<img src="./images/Сая.jpg" height="700" class="сая">
+					<img src="./images/blb yf[eq (1).jpg" alt="" width="300">
+					<img src="./images/иди нахуй.jpg" alt="" width="300">
 				</div>
          </div>
 
          <div class="magistral">
-				<canvas class="can" width="1500" height="300"></canvas>
+            <canvas class="can" width="1500" height="300"></canvas>
             <h2>Магистраль 🚄</h2>
             <div>
                <div>
@@ -52,7 +63,7 @@
          </div>
       </div>
 
-		<div class="c-mag"></div>
+      <div class="c-mag"></div>
 
       <script src="./script.js"></script>
    </body>
