--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
                <h1>Московская гостинница</h1>
                <img src="./images/mpa.jpg" class="gostinnia" height="500" />
                <div>
-                  <button class="bvBtn">Белая ветка</button>
                   <button class="chvBtn">Черная ветка</button>
                </div>
             </div>
 
             <div>
                <img src="./images/Сая.jpg" height="700" class="сая" />
-					<p>убей себя педовка</p>
+               <p>убей себя педовка</p>
             </div>
 
             <div>
@@ -40,13 +39,14 @@
                <canvas class="elevator" width="80" height="920"></canvas>
             </div>
 
-				<div>
-					<img src="./images/blb yf[eq (1).jpg" alt="" width="300">
-					<img src="./images/иди нахуй.jpg" alt="" width="300">
-				</div>
+            <div>
+               <img src="./images/blb yf[eq (1).jpg" alt="" width="300" />
+               <img src="./images/иди нахуй.jpg" alt="" width="300" />
+            </div>
          </div>
 
          <div class="magistral">
+            <button class="bvBtn">Вперёд!</button><br><br>
             <canvas class="can" width="1500" height="300"></canvas>
             <h2>Магистраль 🚄</h2>
             <div>
