--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
 
       <div class="c-mag"></div>
 
-      <script src="./script.js"></script>
+      <script src="./script.js" type="module"></script>
    </body>
 </html>
