--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Булька карабулька</title>
+      <link rel="stylesheet" href="reset.css" />
       <link rel="stylesheet" href="style.css" />
    </head>
    <body>
       <div class="downyata">
-         <div class="col">
+         <!-- <div class="col">
             <div class="wrap">
                <img class="a" src="./images/bg.jpg" width="400" height="100" />
                <div class="stat">
@@ -40,15 +41,14 @@
                <img src="./images/blb yf[eq (1).jpg" alt="" width="300" />
                <img src="./images/иди нахуй.jpg" alt="" width="300" />
             </div>
-         </div>
+         </div> -->
 
+         <button class="bvBtn">Вперёд!</button><br /><br /><br />
          <div class="magistral">
-            <button class="bvBtn">Вперёд!</button><br><br>
-            <canvas class="can" width="1500" height="300"></canvas>
+            <div class="train"></div>
+            <!-- <canvas class="can" width="1500" height="300"></canvas> -->
          </div>
       </div>
-
-      <div class="c-mag"></div>
 
       <script src="./script.js" type="module"></script>
    </body>
