--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
             </div>
          </div> -->
 
-         <button class="bvBtn">Вперёд!</button><br /><br /><br />
+         <button class="bvBtn">Вперёд!</button>
          <div class="magistral">
-            <div class="train"></div>
+            <div class="magistral__train"></div>
+				<div class="magistral__timer"></div>
             <!-- <canvas class="can" width="1500" height="300"></canvas> -->
          </div>
       </div>
