--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    </head>
    <body>
       <div class="downyata">
-         <!-- <div class="col">
+         <div class="col">
             <div class="wrap">
                <img class="a" src="./images/bg.jpg" width="400" height="100" />
                <div class="stat">
@@ -41,13 +41,15 @@
                <img src="./images/blb yf[eq (1).jpg" alt="" width="300" />
                <img src="./images/иди нахуй.jpg" alt="" width="300" />
             </div>
-         </div> -->
+         </div>
 
          <button class="bvBtn">Вперёд!</button>
          <div class="magistral">
-            <div class="magistral__train"></div>
-				<div class="magistral__timer"></div>
-            <!-- <canvas class="can" width="1500" height="300"></canvas> -->
+            <div class="magistral__train">=></div>
+            <div class="magistral__timer">
+               <span class="timer__label">Go</span>
+               <span class="timer__content"></span>
+            </div>
          </div>
       </div>
 
