--- a/index.html
+++ b/index.html
@@ -43,7 +43,17 @@
             </div>
          </div>
 
-         <button class="bvBtn">Вперёд!</button>
+         <div class="magistral__paper">
+            <div>
+               <label for="fromSity">Из города:</label>
+               <select name="fromSity" id="fromSity"></select>
+            </div>
+            <div>
+               <label for="toSity">В город:</label>
+               <select name="toSity" id="toSity"></select>
+            </div>
+            <button class="bvBtn">Вперёд!</button>
+         </div>
          <div class="magistral">
             <div class="magistral__train">=></div>
             <div class="magistral__timer">
