--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
             </div>
             <button class="bvBtn">Вперёд!</button>
          </div>
-         <div class="magistral">
-            <div class="magistral__train">=></div>
-            <div class="magistral__timer">
-               <span class="timer__label">Go</span>
-               <span class="timer__content"></span>
+
+         <div class="line line--blue">
+            <div class="line__train">=></div>
+            <div class="line__timer">
+               <span class="line__timer-label">Go</span>
+               <span class="line__timer-content"></span>
             </div>
          </div>
       </div>
