--- a/client/src/index.html
+++ b/client/src/index.html
@@ -6,7 +6,22 @@
       <title>Булька карабулька</title>
    </head>
    <body>
-      <div class="downyata">
+		<div>
+			<form id="app__login">
+				<label>
+					<span>Введи имя:</span>
+					<input type="text" class="app__login-name">
+				</label>
+				<label>
+					<span>Введи пароль:</span>
+					<input type="text" class="app__login-password">
+				</label>
+				<input type="reset" value="Очистить форму">
+				<input type="submit" value="Войти на сервер">
+			</form>
+		</div>
+		<div id="app">
+			<div class="downyata">
          <!-- <div class="col">
             <div class="wrap">
                <img class="a" src="./images/bg.jpg" width="400" height="100" />
@@ -61,5 +76,7 @@
             </div>
          </div>
       </div>
+	</div>
+</div>
    </body>
 </html>
